# KiKD

./: .gitignore  README.md
lab_1/: .pre-commit-config.yaml  README.md  output.txt  pyproject.toml
lab_1/src/: FileAnalyser.py  main.py
lab_1/tests/: test_all_test_data.py
lab_2/: encode_output  pyproject.toml
lab_2/src/: __init__.py  adaptive_model.py  arithmetic_decoder.py  arithmetic_encoder.py  bit_io.py  decoder.py  encoder.py
lab_2/tests/: test_pipeline.py
lab_3/: encode_output  pyproject.toml
lab_3/src/: bit_io.py  lzw_decoder.py  lzw_encoder.py  universal_coding.py  utils.py
lab_3/tests/: test_lzw.py
lab_4/: pyproject.toml
lab_4/src/: jpeg_ls.py
lab_4/tests/: test_jpeg_ls.py
lab_5/: pyproject.toml
lab_5/src/: vector_quantization.py
lab_5/tests/: test_vq.py
lab_6/: pyproject.toml
lab_6/src/: decode.py  encode.py  lbg_1d.py  metrics.py  transform.py
lab_6/tests/: test_lab_6.py
lab_7/: pyproject.toml
lab_7/src/: check.py  decoder.py  encoder.py  hamming.py  noise.py
lab_7/tests/: test_lab7.py
