[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-3"
version = "0.1.0"
description = "Adaptive arithmetic encoding/decoding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
