[project]
name = "lab-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
`
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]